// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cloud.spanner.v1;

import "google/protobuf/struct.proto";
import "google/spanner/v1/type.proto";

message SqlPartition {
  string partition_token = 1;
  bytes transaction_id = 2;
  string sql_statement = 3;
  google.protobuf.Struct params = 4;
  map<string, google.spanner.v1.Type> param_types = 5;
}